--- a/dev/examples/quick_start/index.html
+++ b/dev/examples/quick_start/index.html
@@ -21,7 +21,7 @@ Other developers:
 
 Package information:
 ====================================
-HierarchicalEOM Version: 0.4.2
+HierarchicalEOM Version: 1.0.0
 JLD2            Version: 0.4.37
 LinearSolve     Version: 2.11.1
 OrdinaryDiffEq  Version: 6.58.0
@@ -32,7 +32,7 @@ System information:
 ====================================
 Julia Version: 1.9.3
 OS       : Linux (x86_64-linux-gnu)
-CPU      : 2 × Intel(R) Xeon(R) Platinum 8272CL CPU @ 2.60GHz
+CPU      : 2 × Intel(R) Xeon(R) Platinum 8171M CPU @ 2.60GHz
 Memory   : 6.76 GB
 WORD_SIZE: 64
 LIBM     : libopenlibm
@@ -65,7 +65,7 @@ tier = 5
 
 # Remember to give the operator in Standard matrix (AbstractMatrix) type
 # That is, if using QuantumOptics package, give system hamiltonian as Hsys.data
-L = M_Boson(Hsys.data, tier, bath)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Boson type HEOMLS matrix with (system) dim = 2 and parity = :even
+L = M_Boson(Hsys.data, tier, bath)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Boson type HEOMLS matrix with system dim = 2 and parity = even-parity
 number of ADOs N = 56
 data =
 224×224 SparseArrays.SparseMatrixCSC{ComplexF64, Int64} with 1160 stored entries:
@@ -90,7 +90,7 @@ data =
 ⎢⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠘⠂⠠⣌⠀⠋⠛⣤⡤⠤⎥
 ⎣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠑⠆⠀⣏⠱⣦⎦</code></pre><p>To learn more about the HEOM Liouvillian superoperator matrix (including other types: <code>M_Fermion</code>, <code>M_Boson_Fermion</code>), please refer to <a href="../../heom_matrix/HEOMLS_intro/#doc-HEOMLS-Matrix">HEOMLS Matrices</a>.</p><h3 id="Time-Evolution"><a class="docs-heading-anchor" href="#Time-Evolution">Time Evolution</a><a id="Time-Evolution-1"></a><a class="docs-heading-anchor-permalink" href="#Time-Evolution" title="Permalink"></a></h3><p>Next, we can calculate the time evolution for the entire auxiliary density operators (ADOs) by calling <a href="../../libraryAPI/#HierarchicalEOM.HeomAPI.evolution"><code>evolution</code></a></p><pre><code class="language-julia hljs">tlist = 0:0.2:50
 ados_list = evolution(L, ρ0.data, tlist);</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Solving time evolution for auxiliary density operators...
-[DONE]</code></pre><p>To learn more about <code>evolution</code>, please refer to <a href="../../time_evolution/#doc-Time-Evolution">Time Evolution</a>.</p><h3 id="Stationary-State"><a class="docs-heading-anchor" href="#Stationary-State">Stationary State</a><a id="Stationary-State-1"></a><a class="docs-heading-anchor-permalink" href="#Stationary-State" title="Permalink"></a></h3><p>We can also solve the stationary state of the auxiliary density operators (ADOs) by calling <a href="../../libraryAPI/#HierarchicalEOM.HeomAPI.SteadyState"><code>SteadyState</code></a>.</p><pre><code class="language-julia hljs">ados_steady = SteadyState(L)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Auxiliary Density Operators with even parity, (system) dim = 2, number N = 56
+[DONE]</code></pre><p>To learn more about <code>evolution</code>, please refer to <a href="../../time_evolution/#doc-Time-Evolution">Time Evolution</a>.</p><h3 id="Stationary-State"><a class="docs-heading-anchor" href="#Stationary-State">Stationary State</a><a id="Stationary-State-1"></a><a class="docs-heading-anchor-permalink" href="#Stationary-State" title="Permalink"></a></h3><p>We can also solve the stationary state of the auxiliary density operators (ADOs) by calling <a href="../../libraryAPI/#HierarchicalEOM.HeomAPI.SteadyState"><code>SteadyState</code></a>.</p><pre><code class="language-julia hljs">ados_steady = SteadyState(L)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Auxiliary Density Operators with even-parity, (system) dim = 2, number N = 56
 </code></pre><p>To learn more about <code>SteadyState</code>, please refer to <a href="../../stationary_state/#doc-Stationary-State">Stationary State</a>.</p><h3 id="Reduced-Density-Operator"><a class="docs-heading-anchor" href="#Reduced-Density-Operator">Reduced Density Operator</a><a id="Reduced-Density-Operator-1"></a><a class="docs-heading-anchor-permalink" href="#Reduced-Density-Operator" title="Permalink"></a></h3><p>To obtain the reduced density operator, one can either access the first element of auxiliary density operator (<code>ADOs</code>) or call <a href="../../libraryAPI/#HierarchicalEOM.HeomAPI.getRho"><code>getRho</code></a>:</p><pre><code class="language-julia hljs"># reduce density operator in third time step of the evolution
 ρ = ados_list[3][1]
 ρ = getRho(ados_list[3])
@@ -120,7 +120,7 @@ plot!(tlist, ones(length(tlist)) .* p00_s, label = L&quot;\textrm{P}_{00} \textr
 plot!(tlist, ones(length(tlist)) .* p01_s, label = L&quot;\textrm{P}_{01} \textrm{(Steady State)}&quot;, linecolor=:red, linestyle=:dash, linewidth=3)
 
 xlabel!(&quot;time&quot;)
-ylabel!(&quot;Population&quot;)</code></pre><img src="904d63ed.svg" alt="Example block output"/><h3 id="Multiple-Baths"><a class="docs-heading-anchor" href="#Multiple-Baths">Multiple Baths</a><a id="Multiple-Baths-1"></a><a class="docs-heading-anchor-permalink" href="#Multiple-Baths" title="Permalink"></a></h3><p><code>HierarchicalEOM.jl</code> also supports for system to interact with multiple baths.</p><p>All you need to do is to provide a list of baths instead of a single bath</p><p>Note that, for the following, we use the built-in linear algebra in Julia (instead of <code>QuantumOptics.jl</code>) to construct the operators</p><pre><code class="language-julia hljs"># The system Hamiltonian
+ylabel!(&quot;Population&quot;)</code></pre><img src="6e2ee018.svg" alt="Example block output"/><h3 id="Multiple-Baths"><a class="docs-heading-anchor" href="#Multiple-Baths">Multiple Baths</a><a id="Multiple-Baths-1"></a><a class="docs-heading-anchor-permalink" href="#Multiple-Baths" title="Permalink"></a></h3><p><code>HierarchicalEOM.jl</code> also supports for system to interact with multiple baths.</p><p>All you need to do is to provide a list of baths instead of a single bath</p><p>Note that, for the following, we use the built-in linear algebra in Julia (instead of <code>QuantumOptics.jl</code>) to construct the operators</p><pre><code class="language-julia hljs"># The system Hamiltonian
 Hsys = [
     0.25 1.50 2.50;
     1.50 0.75 3.50;
@@ -164,4 +164,4 @@ plot(tlist, p0, linewidth=3, linecolor=&quot;blue&quot;, label=L&quot;P_0&quot;,
 plot!(tlist, p1, linewidth=3, linecolor=&quot;orange&quot;, label=L&quot;P_1&quot;)
 plot!(tlist, p2, linewidth=3, linecolor=:green, label=L&quot;P_2&quot;)
 xlabel!(&quot;time&quot;)
-ylabel!(&quot;Population&quot;)</code></pre><img src="ce35bd29.svg" alt="Example block output"/><p>Note that this example can also be found in <a href="https://qutip.org/docs/latest/guide/heom/bosonic.html">qutip documentation</a>.</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../../install/">« Installation</a><a class="docs-footer-nextpage" href="../../cite/">Cite HierarchicalEOM.jl »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="auto">Automatic (OS)</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.1.2 on <span class="colophon-date" title="Tuesday 24 October 2023 02:06">Tuesday 24 October 2023</span>. Using Julia version 1.9.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+ylabel!(&quot;Population&quot;)</code></pre><img src="5d9682bb.svg" alt="Example block output"/><p>Note that this example can also be found in <a href="https://qutip.org/docs/latest/guide/heom/bosonic.html">qutip documentation</a>.</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../../install/">« Installation</a><a class="docs-footer-nextpage" href="../../cite/">Cite HierarchicalEOM.jl »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="auto">Automatic (OS)</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.1.2 on <span class="colophon-date" title="Tuesday 24 October 2023 04:26">Tuesday 24 October 2023</span>. Using Julia version 1.9.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
