--- a/dev/examples/quick_start/index.html
+++ b/dev/examples/quick_start/index.html
@@ -23,22 +23,22 @@ Package information:
 ====================================
 HierarchicalEOM Ver. 1.5.1
 LinearSolve     Ver. 2.22.1
-OrdinaryDiffEq  Ver. 6.74.1
+OrdinaryDiffEq  Ver. 6.80.1
 FastExpm        Ver. 1.1.0
-JLD2            Ver. 0.4.46
+JLD2            Ver. 0.4.48
 
 System information:
 ====================================
-Julia Version: 1.10.2
+Julia Version: 1.10.3
 OS       : Linux (x86_64-linux-gnu)
 CPU      : 4 × AMD EPYC 7763 64-Core Processor
-Memory   : 15.606 GB
+Memory   : 15.607 GB
 WORD_SIZE: 64
 LIBM     : libopenlibm
 LLVM     : libLLVM-15.0.7 (ORCJIT, znver3)
 BLAS     : libopenblas64_.so (ilp64)</code></pre><h3 id="System-and-Bath"><a class="docs-heading-anchor" href="#System-and-Bath">System and Bath</a><a id="System-and-Bath-1"></a><a class="docs-heading-anchor-permalink" href="#System-and-Bath" title="Permalink"></a></h3><p>Let us consider a simple two-level system coupled to a Drude-Lorentz bosonic bath. The system Hamiltonian, <span>$H_{sys}$</span>, and the bath spectral density, <span>$J_D$</span>, are</p><p class="math-container">\[H_{sys}=\frac{\epsilon \sigma_z}{2} + \frac{\Delta \sigma_x}{2} ~~\text{and}\]</p><p class="math-container">\[J_{D}(\omega)=\frac{2\lambda W\omega}{W^2+\omega^2},\]</p><h4 id="System-Hamiltonian-and-initial-state"><a class="docs-heading-anchor" href="#System-Hamiltonian-and-initial-state">System Hamiltonian and initial state</a><a id="System-Hamiltonian-and-initial-state-1"></a><a class="docs-heading-anchor-permalink" href="#System-Hamiltonian-and-initial-state" title="Permalink"></a></h4><p>You can construct system hamiltonian, initial state, and coupling operators by standard julia bulit-in types: <code>Vector</code>, <code>SparseVector</code>, <code>Matrix</code>, <code>SparseMatrix</code>.</p><p>Moreover, it is also convenient to use <a href="https://qojulia.org/"><code>QuantumOptics</code></a> or <a href="https://github.com/albertomercurio/QuantumToolbox.jl"><code>QuantumToolbox</code></a> framework. They both provide many useful functions to create arbitrary quantum states and operators which can be combined in all the expected ways.</p><p>Note that <code>HierarchicalEOM.jl</code> only accept standard julia bulit-in types. If you use <code>QuantumOptics</code> or <code>QuantumToolbox</code> to construct the operators, remember that the matrix (or vector) in standard type are stored in <code>.data</code> field of the objects, i.e., <code>op.data</code>. Thus, you should take it as the inputs of <code>HierarchicalEOM.jl</code>.</p><div class="admonition is-compat"><header class="admonition-header">Extension for QuantumOptics.jl</header><div class="admonition-body"><p><code>HierarchicalEOM.jl</code> provides an extension to support <code>QuantumOptics</code>-type object, but this feature requires <code>Julia 1.9+</code> and <code>HierarchicalEOM 0.3+</code>. See <a href="../../extensions/QuantumOptics/#doc-ext-QuantumOptics">here</a> for more details.</p></div></div><div class="admonition is-compat"><header class="admonition-header">Extension for QuantumToolbox.jl</header><div class="admonition-body"><p><code>HierarchicalEOM.jl</code> provides an extension to support <code>QuantumToolbox</code>-type object, but this feature requires <code>Julia 1.9+</code> and <code>HierarchicalEOM 1.4+</code>. See <a href="../../extensions/QuantumToolbox/#doc-ext-QuantumToolbox">here</a> for more details.</p></div></div><p>We demonstrate this tutorial by <code>QuantumOptics</code>:</p><pre><code class="language-julia hljs">import QuantumOptics: SpinBasis, sigmaz, sigmax, ⊗, Ket, Bra, dm
 
-basis = SpinBasis(1//2)
+basis = SpinBasis(1 // 2)
 
 # The system Hamiltonian
 ϵ = 0.5 # energy of 2-level system
@@ -47,8 +47,8 @@ basis = SpinBasis(1//2)
 Hsys = 0.5 * ϵ * sigmaz(basis) + 0.5 * Δ * sigmax(basis)
 
 # System initial state
-ρ0 = dm(Ket(basis, [1, 0]));</code></pre><h4 id="Bath-Properties"><a class="docs-heading-anchor" href="#Bath-Properties">Bath Properties</a><a id="Bath-Properties-1"></a><a class="docs-heading-anchor-permalink" href="#Bath-Properties" title="Permalink"></a></h4><p>Now, we demonstrate how to describe the bath using the built-in implementation of <span>$J_D(\omega)$</span> under Pade expansion by calling <a href="../../libraryAPI/#HierarchicalEOM.Bath.Boson_DrudeLorentz_Pade"><code>Boson_DrudeLorentz_Pade</code></a></p><pre><code class="language-julia hljs">λ  = 0.1  # coupling strength
-W  = 0.5  # band-width (cut-off frequency)
+ρ0 = dm(Ket(basis, [1, 0]));</code></pre><h4 id="Bath-Properties"><a class="docs-heading-anchor" href="#Bath-Properties">Bath Properties</a><a id="Bath-Properties-1"></a><a class="docs-heading-anchor-permalink" href="#Bath-Properties" title="Permalink"></a></h4><p>Now, we demonstrate how to describe the bath using the built-in implementation of <span>$J_D(\omega)$</span> under Pade expansion by calling <a href="../../libraryAPI/#HierarchicalEOM.Bath.Boson_DrudeLorentz_Pade"><code>Boson_DrudeLorentz_Pade</code></a></p><pre><code class="language-julia hljs">λ = 0.1  # coupling strength
+W = 0.5  # band-width (cut-off frequency)
 kT = 0.5  # the product of the Boltzmann constant k and the absolute temperature T
 
 Q = sigmaz(basis) # system-bath coupling operator
@@ -114,23 +114,37 @@ p01_s = Expect(P01.data, ados_steady)
 p00_e = Expect(P00.data, ados_list)
 p01_e = Expect(P01.data, ados_list);</code></pre><h3 id="Plot-the-results"><a class="docs-heading-anchor" href="#Plot-the-results">Plot the results</a><a id="Plot-the-results-1"></a><a class="docs-heading-anchor-permalink" href="#Plot-the-results" title="Permalink"></a></h3><pre><code class="language-julia hljs">using Plots, LaTeXStrings
 
-plot(tlist, p00_e, label = L&quot;\textrm{P}_{00}&quot;, linecolor=:blue, linestyle=:solid, linewidth=3, grid=false)
-plot!(tlist, p01_e, label = L&quot;\textrm{P}_{01}&quot;, linecolor=:red, linestyle=:solid, linewidth=3)
-plot!(tlist, ones(length(tlist)) .* p00_s, label = L&quot;\textrm{P}_{00} \textrm{(Steady State)}&quot;, linecolor=:blue, linestyle=:dash, linewidth=3)
-plot!(tlist, ones(length(tlist)) .* p01_s, label = L&quot;\textrm{P}_{01} \textrm{(Steady State)}&quot;, linecolor=:red, linestyle=:dash, linewidth=3)
+plot(tlist, p00_e, label = L&quot;\textrm{P}_{00}&quot;, linecolor = :blue, linestyle = :solid, linewidth = 3, grid = false)
+plot!(tlist, p01_e, label = L&quot;\textrm{P}_{01}&quot;, linecolor = :red, linestyle = :solid, linewidth = 3)
+plot!(
+    tlist,
+    ones(length(tlist)) .* p00_s,
+    label = L&quot;\textrm{P}_{00} \textrm{(Steady State)}&quot;,
+    linecolor = :blue,
+    linestyle = :dash,
+    linewidth = 3,
+)
+plot!(
+    tlist,
+    ones(length(tlist)) .* p01_s,
+    label = L&quot;\textrm{P}_{01} \textrm{(Steady State)}&quot;,
+    linecolor = :red,
+    linestyle = :dash,
+    linewidth = 3,
+)
 
 xlabel!(&quot;time&quot;)
-ylabel!(&quot;Population&quot;)</code></pre><img src="3ec7c71e.svg" alt="Example block output"/><h3 id="Multiple-Baths"><a class="docs-heading-anchor" href="#Multiple-Baths">Multiple Baths</a><a id="Multiple-Baths-1"></a><a class="docs-heading-anchor-permalink" href="#Multiple-Baths" title="Permalink"></a></h3><p><code>HierarchicalEOM.jl</code> also supports for system to interact with multiple baths.</p><p>All you need to do is to provide a list of baths instead of a single bath</p><p>Note that, for the following, we use the built-in linear algebra in Julia (instead of <code>QuantumOptics.jl</code>) to construct the operators</p><pre><code class="language-julia hljs"># The system Hamiltonian
+ylabel!(&quot;Population&quot;)</code></pre><img src="1b292ee4.svg" alt="Example block output"/><h3 id="Multiple-Baths"><a class="docs-heading-anchor" href="#Multiple-Baths">Multiple Baths</a><a id="Multiple-Baths-1"></a><a class="docs-heading-anchor-permalink" href="#Multiple-Baths" title="Permalink"></a></h3><p><code>HierarchicalEOM.jl</code> also supports for system to interact with multiple baths.</p><p>All you need to do is to provide a list of baths instead of a single bath</p><p>Note that, for the following, we use the built-in linear algebra in Julia (instead of <code>QuantumOptics.jl</code>) to construct the operators</p><pre><code class="language-julia hljs"># The system Hamiltonian
 Hsys = [
-    0.25 1.50 2.50;
-    1.50 0.75 3.50;
+    0.25 1.50 2.50
+    1.50 0.75 3.50
     2.50 3.50 1.25
 ]
 
 # System initial state
 ρ0 = [
-    1 0 0;
-    0 0 0;
+    1 0 0
+    0 0 0
     0 0 0
 ];
 
@@ -160,8 +174,8 @@ p0 = Expect(P00, ados_list)
 p1 = Expect(P11, ados_list)
 p2 = Expect(P22, ados_list)
 
-plot(tlist, p0, linewidth=3, linecolor=&quot;blue&quot;, label=L&quot;P_0&quot;, grid=false)
-plot!(tlist, p1, linewidth=3, linecolor=&quot;orange&quot;, label=L&quot;P_1&quot;)
-plot!(tlist, p2, linewidth=3, linecolor=:green, label=L&quot;P_2&quot;)
+plot(tlist, p0, linewidth = 3, linecolor = &quot;blue&quot;, label = L&quot;P_0&quot;, grid = false)
+plot!(tlist, p1, linewidth = 3, linecolor = &quot;orange&quot;, label = L&quot;P_1&quot;)
+plot!(tlist, p2, linewidth = 3, linecolor = :green, label = L&quot;P_2&quot;)
 xlabel!(&quot;time&quot;)
-ylabel!(&quot;Population&quot;)</code></pre><img src="34a058ed.svg" alt="Example block output"/><p>Note that this example can also be found in <a href="https://qutip.org/docs/latest/guide/heom/bosonic.html">qutip documentation</a>.</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../../install/">« Installation</a><a class="docs-footer-nextpage" href="../../cite/">Cite HierarchicalEOM.jl »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.3.0 on <span class="colophon-date" title="Tuesday 16 April 2024 16:10">Tuesday 16 April 2024</span>. Using Julia version 1.10.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+ylabel!(&quot;Population&quot;)</code></pre><img src="a850f0a6.svg" alt="Example block output"/><p>Note that this example can also be found in <a href="https://qutip.org/docs/latest/guide/heom/bosonic.html">qutip documentation</a>.</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../../install/">« Installation</a><a class="docs-footer-nextpage" href="../../cite/">Cite HierarchicalEOM.jl »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.4.1 on <span class="colophon-date" title="Tuesday 28 May 2024 06:00">Tuesday 28 May 2024</span>. Using Julia version 1.10.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
