--- a/dev/examples/cavityQED/index.html
+++ b/dev/examples/cavityQED/index.html
@@ -59,7 +59,7 @@ Plots.plot!(tlist_test, imag(Ct), label = &quot;N=20 (imag part)&quot;, linestyl
 Plots.plot!(tlist_test, imag(Ct2), label = &quot;N=1000 (imag part)&quot;, linestyle = :solid, linewidth = 3)
 
 Plots.xaxis!(&quot;t&quot;)
-Plots.yaxis!(&quot;C(t)&quot;)</code></pre><img src="d73b86b4.svg" alt="Example block output"/><h2 id="Construct-HEOMLS-matrix"><a class="docs-heading-anchor" href="#Construct-HEOMLS-matrix">Construct HEOMLS matrix</a><a id="Construct-HEOMLS-matrix-1"></a><a class="docs-heading-anchor-permalink" href="#Construct-HEOMLS-matrix" title="Permalink"></a></h2><p>(see also <a href="../../heom_matrix/M_Boson/#doc-M_Boson">HEOMLS Matrix for Bosonic Baths</a>) Here, we consider an incoherent pumping to the atom, which can be described by an Lindblad dissipator (see <a href="../../heom_matrix/master_eq/#doc-Master-Equation">here</a> for more details).</p><p>Furthermore, we set the <a href="../../heom_matrix/HEOMLS_intro/#doc-Importance-Value-and-Threshold">important threshold</a> to be <code>1e-6</code>.</p><pre><code class="language-julia hljs">pump = 0.01
+Plots.yaxis!(&quot;C(t)&quot;)</code></pre><img src="5e0d0c02.svg" alt="Example block output"/><h2 id="Construct-HEOMLS-matrix"><a class="docs-heading-anchor" href="#Construct-HEOMLS-matrix">Construct HEOMLS matrix</a><a id="Construct-HEOMLS-matrix-1"></a><a class="docs-heading-anchor-permalink" href="#Construct-HEOMLS-matrix" title="Permalink"></a></h2><p>(see also <a href="../../heom_matrix/M_Boson/#doc-M_Boson">HEOMLS Matrix for Bosonic Baths</a>) Here, we consider an incoherent pumping to the atom, which can be described by an Lindblad dissipator (see <a href="../../heom_matrix/master_eq/#doc-Master-Equation">here</a> for more details).</p><p>Furthermore, we set the <a href="../../heom_matrix/HEOMLS_intro/#doc-Importance-Value-and-Threshold">important threshold</a> to be <code>1e-6</code>.</p><pre><code class="language-julia hljs">pump = 0.01
 J_pump = sqrt(pump) * σm&#39;
 
 tier = 2
@@ -89,9 +89,18 @@ data =
 ⎢⠀⠀⠀⠙⢷⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡇⠈⠻⣦⡀⠀⠀⠀⎥
 ⎢⠀⠀⠀⠀⠀⠙⠂⠰⠆⠀⠀⠀⢠⡄⠀⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡇⠀⠀⠈⠱⣦⡀⠀⎥
 ⎣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠀⠀⠛⠀⠀⠒⠀⠀⠀⠰⠀⠀⠀⠀⠀⠀⡇⠀⠀⠀⠀⠈⠻⣦⎦</code></pre><h2 id="Solve-time-evolution-of-ADOs"><a class="docs-heading-anchor" href="#Solve-time-evolution-of-ADOs">Solve time evolution of ADOs</a><a id="Solve-time-evolution-of-ADOs-1"></a><a class="docs-heading-anchor-permalink" href="#Solve-time-evolution-of-ADOs" title="Permalink"></a></h2><p>(see also <a href="../../time_evolution/#doc-Time-Evolution">Time Evolution</a>)</p><pre><code class="language-julia hljs">t_list = 0:1:500
-evo_H = evolution(M_Heom, ψ0, t_list);</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Solving time evolution for ADOs by Ordinary Differential Equations method...
-Progress: [====================          ]  67.5% --- Elapsed Time: 0h 00m 01s (ETA: 0h 00m 00s)[DONE]</code></pre><h2 id="Solve-stationary-state-of-ADOs"><a class="docs-heading-anchor" href="#Solve-stationary-state-of-ADOs">Solve stationary state of ADOs</a><a id="Solve-stationary-state-of-ADOs-1"></a><a class="docs-heading-anchor-permalink" href="#Solve-stationary-state-of-ADOs" title="Permalink"></a></h2><p>(see also <a href="../../stationary_state/#doc-Stationary-State">Stationary State</a>)</p><pre><code class="language-julia hljs">steady_H = steadystate(M_Heom);</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Solving steady state for ADOs by linear-solve method...[DONE]</code></pre><h2 id="Expectation-values"><a class="docs-heading-anchor" href="#Expectation-values">Expectation values</a><a id="Expectation-values-1"></a><a class="docs-heading-anchor-permalink" href="#Expectation-values" title="Permalink"></a></h2><p>observable of atom: <span>$\sigma_z$</span></p><pre><code class="language-julia hljs">σz_evo_H = expect(σz, evo_H)
-σz_steady_H = expect(σz, steady_H)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">-0.37311739312829556</code></pre><p>observable of cavity: <span>$a^\dagger a$</span> (average photon number)</p><pre><code class="language-julia hljs">np_evo_H = expect(a&#39; * a, evo_H)
+sol_H = HEOMsolve(M_Heom, ψ0, t_list; e_ops = [σz, a&#39; * a])</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Solution of hierarchical EOM
+(return code: Success)
+----------------------------
+Btier = 2
+Ftier = 0
+num_states = 1
+num_expect = 2
+ODE alg.: OrdinaryDiffEqLowOrderRK.DP5{typeof(OrdinaryDiffEqCore.trivial_limiter!), typeof(OrdinaryDiffEqCore.trivial_limiter!), Static.False}(OrdinaryDiffEqCore.trivial_limiter!, OrdinaryDiffEqCore.trivial_limiter!, static(false))
+abstol = 1.0e-8
+reltol = 1.0e-6
+</code></pre><h2 id="Solve-stationary-state-of-ADOs"><a class="docs-heading-anchor" href="#Solve-stationary-state-of-ADOs">Solve stationary state of ADOs</a><a id="Solve-stationary-state-of-ADOs-1"></a><a class="docs-heading-anchor-permalink" href="#Solve-stationary-state-of-ADOs" title="Permalink"></a></h2><p>(see also <a href="../../stationary_state/#doc-Stationary-State">Stationary State</a>)</p><pre><code class="language-julia hljs">steady_H = steadystate(M_Heom);</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Solving steady state for ADOs by linear-solve method...[DONE]</code></pre><h2 id="Expectation-values"><a class="docs-heading-anchor" href="#Expectation-values">Expectation values</a><a id="Expectation-values-1"></a><a class="docs-heading-anchor-permalink" href="#Expectation-values" title="Permalink"></a></h2><p>observable of atom: <span>$\sigma_z$</span></p><pre><code class="language-julia hljs">σz_evo_H = real(sol_H.expect[1, :])
+σz_steady_H = expect(σz, steady_H)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">-0.37311739312829556</code></pre><p>observable of cavity: <span>$a^\dagger a$</span> (average photon number)</p><pre><code class="language-julia hljs">np_evo_H = real(sol_H.expect[2, :])
 np_steady_H = expect(a&#39; * a, steady_H)
 
 p1 = Plots.plot(
@@ -109,11 +118,11 @@ p2 = Plots.plot(
     linestyle = [:solid :dash],
 )
 Plots.plot(p1, p2, layout = [1, 1])
-Plots.xaxis!(&quot;t&quot;)</code></pre><img src="7b165145.svg" alt="Example block output"/><h2 id="Power-spectrum"><a class="docs-heading-anchor" href="#Power-spectrum">Power spectrum</a><a id="Power-spectrum-1"></a><a class="docs-heading-anchor-permalink" href="#Power-spectrum" title="Permalink"></a></h2><p>(see also <a href="../../spectrum/#doc-Spectrum">Spectrum</a>)</p><pre><code class="language-julia hljs">ω_list = 1:0.01:3
+Plots.xaxis!(&quot;t&quot;)</code></pre><img src="cdf0e0ab.svg" alt="Example block output"/><h2 id="Power-spectrum"><a class="docs-heading-anchor" href="#Power-spectrum">Power spectrum</a><a id="Power-spectrum-1"></a><a class="docs-heading-anchor-permalink" href="#Power-spectrum" title="Permalink"></a></h2><p>(see also <a href="../../spectrum/#doc-Spectrum">Spectrum</a>)</p><pre><code class="language-julia hljs">ω_list = 1:0.01:3
 psd_H = PowerSpectrum(M_Heom, steady_H, a, ω_list)
 
 Plots.plot(ω_list, psd_H, linewidth = 3)
-Plots.xaxis!(L&quot;\omega&quot;)</code></pre><img src="64df3ac5.svg" alt="Example block output"/><h2 id="Compare-with-Master-Eq.-approach"><a class="docs-heading-anchor" href="#Compare-with-Master-Eq.-approach">Compare with Master Eq. approach</a><a id="Compare-with-Master-Eq.-approach-1"></a><a class="docs-heading-anchor-permalink" href="#Compare-with-Master-Eq.-approach" title="Permalink"></a></h2><p>(see also <a href="../../heom_matrix/master_eq/#doc-Master-Equation">HEOMLS for Master Equations</a>)</p><p>The Lindblad master equations which describs the cavity couples to an extra bosonic reservoir with <a href="../../bath_boson/Boson_Drude_Lorentz/#Boson-Drude-Lorentz">Drude-Lorentzian spectral density</a> is given by</p><pre><code class="language-julia hljs"># Drude_Lorentzian spectral density
+Plots.xaxis!(L&quot;\omega&quot;)</code></pre><img src="83fefbcf.svg" alt="Example block output"/><h2 id="Compare-with-Master-Eq.-approach"><a class="docs-heading-anchor" href="#Compare-with-Master-Eq.-approach">Compare with Master Eq. approach</a><a id="Compare-with-Master-Eq.-approach-1"></a><a class="docs-heading-anchor-permalink" href="#Compare-with-Master-Eq.-approach" title="Permalink"></a></h2><p>(see also <a href="../../heom_matrix/master_eq/#doc-Master-Equation">HEOMLS for Master Equations</a>)</p><p>The Lindblad master equations which describs the cavity couples to an extra bosonic reservoir with <a href="../../bath_boson/Boson_Drude_Lorentz/#Boson-Drude-Lorentz">Drude-Lorentzian spectral density</a> is given by</p><pre><code class="language-julia hljs"># Drude_Lorentzian spectral density
 Drude_Lorentz(ω, Γ, W) = 4 * Γ * W * ω / ((ω)^2 + (W)^2)
 
 # Bose-Einstein distribution
@@ -128,17 +137,17 @@ M_master = M_S(H_s)
 M_master = addBosonDissipator(M_master, jump_op)
 
 # time evolution
-evo_M = evolution(M_master, ψ0, t_list);
+sol_M = HEOMsolve(M_master, ψ0, t_list; e_ops = [σz, a&#39; * a]);
 
-# steady
+# steady state
 steady_M = steadystate(M_master);
 
 # expectation value of σz
-σz_evo_M = expect(σz, evo_M)
+σz_evo_M = real(sol_M.expect[1, :])
 σz_steady_M = expect(σz, steady_M)
 
 # average photon number
-np_evo_M = expect(a&#39; * a, evo_M)
+np_evo_M = real(sol_M.expect[2, :])
 np_steady_M = expect(a&#39; * a, steady_M)
 
 p1 = Plots.plot(
@@ -156,8 +165,8 @@ p2 = Plots.plot(
     linestyle = [:solid :dash],
 )
 Plots.plot(p1, p2, layout = [1, 1])
-Plots.xaxis!(&quot;t&quot;)</code></pre><img src="17a36c22.svg" alt="Example block output"/><p>We can also calculate the power spectrum</p><pre><code class="language-julia hljs">ω_list = 1:0.01:3
+Plots.xaxis!(&quot;t&quot;)</code></pre><img src="b6556ba5.svg" alt="Example block output"/><p>We can also calculate the power spectrum</p><pre><code class="language-julia hljs">ω_list = 1:0.01:3
 psd_M = PowerSpectrum(M_master, steady_M, a, ω_list)
 
 Plots.plot(ω_list, psd_M, linewidth = 3)
-Plots.xaxis!(L&quot;\omega&quot;)</code></pre><img src="5133d1f5.svg" alt="Example block output"/><p>Due to the weak coupling between the system and an extra bosonic environment, the Master equation&#39;s outcome is expected to be similar to the results obtained from the HEOM method.</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../../spectrum/">« Spectrum</a><a class="docs-footer-nextpage" href="../dynamical_decoupling/">Driven Systems and Dynamical Decoupling »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.7.0 on <span class="colophon-date" title="Friday 13 September 2024 05:09">Friday 13 September 2024</span>. Using Julia version 1.10.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+Plots.xaxis!(L&quot;\omega&quot;)</code></pre><img src="a1a8f7ff.svg" alt="Example block output"/><p>Due to the weak coupling between the system and an extra bosonic environment, the Master equation&#39;s outcome is expected to be similar to the results obtained from the HEOM method.</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../../spectrum/">« Spectrum</a><a class="docs-footer-nextpage" href="../dynamical_decoupling/">Driven Systems and Dynamical Decoupling »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.7.0 on <span class="colophon-date" title="Sunday 15 September 2024 05:19">Sunday 15 September 2024</span>. Using Julia version 1.10.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
