--- a/dev/examples/quick_start/index.html
+++ b/dev/examples/quick_start/index.html
@@ -22,8 +22,8 @@ Other developers:
 Package information:
 ====================================
 Julia              Ver. 1.11.1
-HierarchicalEOM    Ver. 2.2.4
-QuantumToolbox     Ver. 0.21.5
+HierarchicalEOM    Ver. 2.3.0
+QuantumToolbox     Ver. 0.22.0
 SciMLOperators     Ver. 0.3.12
 LinearSolve        Ver. 2.37.0
 OrdinaryDiffEqCore Ver. 1.12.1
@@ -72,27 +72,7 @@ L = M_Boson(Hsys, tier, bath)</code></pre><pre class="documenter-example-output"
 system dims = [2]
 number of ADOs N = 56
 data =
-224×224 SparseMatrixCSC{ComplexF64, Int64} with 1160 stored entries:
-⎡⠿⣧⣄⠀⠘⠤⡀⠀⠀⠀⠀⠀⠀⠀⠀⠃⢄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⎤
-⎢⠀⠙⠻⣦⡄⠀⠑⠠⠀⠀⠀⠀⠀⠀⠀⠀⠈⠒⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⎥
-⎢⠒⡄⠀⠉⢱⣶⡄⠀⠢⡀⠀⠀⠀⠀⠀⠀⠀⠀⠐⢢⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⎥
-⎢⠀⠈⠑⡀⠀⠉⢻⣶⠀⠈⠒⠀⠀⠀⠀⠀⠀⠀⠀⠀⠑⠂⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⎥
-⎢⠀⠀⠀⠀⠈⠢⡀⠀⢿⣷⣀⠱⣀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠢⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⎥
-⎢⠀⠀⠀⠀⠀⠀⠘⠀⢄⡘⠻⣦⣀⢄⡀⠀⠀⠀⠀⠀⠀⠀⠀⠠⢀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⎥
-⎢⠀⠀⠀⠀⠀⠀⠀⠀⠀⠘⠀⢜⠛⣤⡤⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⎥
-⎢⢤⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠀⠋⠛⣤⡄⠀⠠⠄⠀⠀⠀⠀⠀⠠⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⎥
-⎢⠀⠑⢦⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⢻⣶⡄⠈⠢⡀⠀⠀⠀⠀⠈⠒⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⎥
-⎢⠀⠀⠀⠉⠰⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠆⡀⠉⢱⣶⡀⠰⣀⠀⠀⠀⠀⠀⠰⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⎥
-⎢⠀⠀⠀⠀⠀⠈⠳⠄⡀⠀⠀⠀⠀⠀⠀⠀⠈⠢⢀⡈⠿⢇⣀⢁⠀⠀⠀⠀⠀⠀⢁⡀⠀⠀⠀⠀⠀⠀⠀⠀⎥
-⎢⠀⠀⠀⠀⠀⠀⠀⠀⠈⠢⢀⡀⠀⠀⠀⠀⠀⠀⠀⠘⠄⢘⠿⢇⣘⡀⠀⠀⠀⠀⠀⠘⡀⠀⠀⠀⠀⠀⠀⠀⎥
-⎢⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠙⠂⢄⠀⡀⠀⠀⠀⠀⠀⠀⠒⠸⠛⣤⣀⠀⢀⠀⠀⠀⠀⡀⠀⠀⠀⠀⠀⠀⎥
-⎢⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⢢⡀⠀⠀⠀⠀⠀⠀⠀⠘⢻⣶⡌⠒⡄⠀⠀⠑⢄⠀⠀⠀⠀⠀⎥
-⎢⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠐⢦⠀⠀⠀⠀⠀⠐⢢⠉⢱⣶⡔⢢⠀⠀⠀⠢⡀⠀⠀⠀⎥
-⎢⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠑⠰⣄⠀⠀⠀⠀⠉⠰⣉⢻⣶⠆⠀⠀⠀⠰⠀⠀⠀⎥
-⎢⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠂⠰⣄⠀⠀⠀⠈⠁⠻⣦⣀⢄⡀⢄⡀⠀⎥
-⎢⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠑⠰⡄⠀⠀⠀⢜⠻⣦⡤⠀⠠⠀⎥
-⎢⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠘⠂⠠⣌⠀⠋⠛⣤⡤⠤⎥
-⎣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠑⠆⠀⣏⠱⣦⎦</code></pre><p>To learn more about the HEOM Liouvillian superoperator matrix (including other types: <code>M_Fermion</code>, <code>M_Boson_Fermion</code>), please refer to <a href="../../heom_matrix/HEOMLS_intro/#doc-HEOMLS-Matrix">HEOMLS Matrices</a>.</p><h3 id="Time-Evolution"><a class="docs-heading-anchor" href="#Time-Evolution">Time Evolution</a><a id="Time-Evolution-1"></a><a class="docs-heading-anchor-permalink" href="#Time-Evolution" title="Permalink"></a></h3><p>Next, we can calculate the time evolution for the entire auxiliary density operators (ADOs) by calling <a href="../../libraryAPI/#HierarchicalEOM.HEOMsolve"><code>HEOMsolve</code></a></p><pre><code class="language-julia hljs">tlist = 0:0.2:50
+MatrixOperator(224 × 224)</code></pre><p>To learn more about the HEOM Liouvillian superoperator matrix (including other types: <code>M_Fermion</code>, <code>M_Boson_Fermion</code>), please refer to <a href="../../heom_matrix/HEOMLS_intro/#doc-HEOMLS-Matrix">HEOMLS Matrices</a>.</p><h3 id="Time-Evolution"><a class="docs-heading-anchor" href="#Time-Evolution">Time Evolution</a><a id="Time-Evolution-1"></a><a class="docs-heading-anchor-permalink" href="#Time-Evolution" title="Permalink"></a></h3><p>Next, we can calculate the time evolution for the entire auxiliary density operators (ADOs) by calling <a href="../../libraryAPI/#HierarchicalEOM.HEOMsolve"><code>HEOMsolve</code></a></p><pre><code class="language-julia hljs">tlist = 0:0.2:50
 sol = HEOMsolve(L, ρ0, tlist; e_ops = [P00, P11, P01])</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Solution of hierarchical EOM
 (return code: Success)
 ----------------------------
@@ -142,7 +122,7 @@ plot!(
 )
 
 xlabel!(&quot;time&quot;)
-ylabel!(&quot;Population&quot;)</code></pre><img src="416045dc.svg" alt="Example block output"/><h3 id="Multiple-Baths"><a class="docs-heading-anchor" href="#Multiple-Baths">Multiple Baths</a><a id="Multiple-Baths-1"></a><a class="docs-heading-anchor-permalink" href="#Multiple-Baths" title="Permalink"></a></h3><p><code>HierarchicalEOM.jl</code> also supports for system to interact with multiple baths.</p><p>All you need to do is to provide a list of baths instead of a single bath</p><pre><code class="language-julia hljs"># The system Hamiltonian
+ylabel!(&quot;Population&quot;)</code></pre><img src="4cdb6e20.svg" alt="Example block output"/><h3 id="Multiple-Baths"><a class="docs-heading-anchor" href="#Multiple-Baths">Multiple Baths</a><a id="Multiple-Baths-1"></a><a class="docs-heading-anchor-permalink" href="#Multiple-Baths" title="Permalink"></a></h3><p><code>HierarchicalEOM.jl</code> also supports for system to interact with multiple baths.</p><p>All you need to do is to provide a list of baths instead of a single bath</p><pre><code class="language-julia hljs"># The system Hamiltonian
 Hsys = Qobj([
     0.25 1.50 2.50
     1.50 0.75 3.50
@@ -180,4 +160,4 @@ plot(tlist, p0, linewidth = 3, linecolor = &quot;blue&quot;, label = L&quot;P_0&
 plot!(tlist, p1, linewidth = 3, linecolor = &quot;orange&quot;, label = L&quot;P_1&quot;)
 plot!(tlist, p2, linewidth = 3, linecolor = :green, label = L&quot;P_2&quot;)
 xlabel!(&quot;time&quot;)
-ylabel!(&quot;Population&quot;)</code></pre><img src="6252b077.svg" alt="Example block output"/><p>Note that this example can also be found in <a href="https://qutip.org/docs/latest/guide/heom/bosonic.html">qutip documentation</a>.</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../../install/">« Installation</a><a class="docs-footer-nextpage" href="../../cite/">Cite HierarchicalEOM.jl »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.8.0 on <span class="colophon-date" title="Friday 22 November 2024 09:40">Friday 22 November 2024</span>. Using Julia version 1.11.1.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+ylabel!(&quot;Population&quot;)</code></pre><img src="f9992841.svg" alt="Example block output"/><p>Note that this example can also be found in <a href="https://qutip.org/docs/latest/guide/heom/bosonic.html">qutip documentation</a>.</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../../install/">« Installation</a><a class="docs-footer-nextpage" href="../../cite/">Cite HierarchicalEOM.jl »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.8.0 on <span class="colophon-date" title="Saturday 23 November 2024 01:35">Saturday 23 November 2024</span>. Using Julia version 1.11.1.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
